Upgrade to support native