@@ -101,6 +101,13 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <includes>
+                    <include>META-INF/**</include>
+                    <include>static/**</include>
+                    <include>application.properties</include>
+                    <include>**/*.proto</include>
+                    <include>org/apache/derby/modules.properties</include>
+                </includes>
                 <excludes>
                     <exclude>static/console-ui/.vscode/**</exclude>
                 </excludes>
@@ -117,7 +124,35 @@
         </plugins>
     </reporting>
     
+    <properties>
+        <shared.native.hints>
+        
+        </shared.native.hints>
+    </properties>
+    
     <profiles>
+        <profile>
+            <id>native-os-windows</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <properties>
+                <osResourcesHints>-H:IncludeResources='.*\.dll$'</osResourcesHints>
+            </properties>
+        </profile>
+        <profile>
+            <id>native-os-unix</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <properties>
+                <osResourcesHints>-H:IncludeResources='.*\.so$ -H:IncludeResources='.*\.jnilib$'</osResourcesHints>
+            </properties>
+        </profile>
         <profile>
             <id>native</id>
             <build>
@@ -151,8 +186,89 @@
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
                         <configuration>
+                            <imageName>nacos-server</imageName>
                             <buildArgs>
-                                <buildArg>--enable-url-protocols=http --enable-preview -march=compatibility</buildArg>
+                                -Dnacos.standalone=true
+                                -march=compatibility
+                                
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --enable-url-protocols=http
+                                --enable-preview
+                                <!-- Resource Hints -->
+                                ${osResourcesHints}
+                                <!-- Runtime Hints -->
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.Unpooled
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.PoolArena
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.ByteBufUtil
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.PooledByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.ByteBufAllocator
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.PooledSlicedByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.UnpooledHeapByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.PoolArena$DirectArena
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.UnpooledDirectByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.PooledByteBufAllocator
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.AbstractByteBufAllocator
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.UnpooledByteBufAllocator
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.PooledUnsafeDirectByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.UnpooledUnsafeDirectByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.AbstractPooledDerivedByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.AbstractReferenceCountedByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.buffer.UnpooledByteBufAllocator$InstrumentedUnpooledUnsafeDirectByteBuf
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.util.AbstractReferenceCounted
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.codec.base64.Base64
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.codec.http.HttpObjectAggregator
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.OpenSsl
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.SslUtils
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.PemValue
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.PemPrivateKey
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.JdkSslContext
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.PemX509Certificate
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.JdkSslContext$Defaults
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.OpenSslPrivateKeyMethod
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.BouncyCastleAlpnSslUtils
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.OpenSslAsyncPrivateKeyMethod
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.ReferenceCountedOpenSslEngine
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl.ReferenceCountedOpenSslContext
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.internal.tcnative.SSL
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.internal.tcnative.CertificateVerifier
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.internal.tcnative.SSLPrivateKeyMethod
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.internal.tcnative.AsyncSSLPrivateKeyMethod
+                                --initialize-at-run-time=io.grpc.netty.shaded.io.netty.internal.tcnative.CertificateCompressionAlgo
+                                
+                                --initialize-at-run-time=com.alipay.sofa.jraft.entity.LocalFileMetaOutter$LocalFileMeta
+                                --initialize-at-run-time=com.alipay.sofa.jraft.rpc.ProtobufMsgFactory
+                                
+                                --initialize-at-run-time=org.apache.derby.jdbc.AutoloadedDriver
+                                --initialize-at-run-time=org.apache.derby.jdbc.InternalDriver
+                                --initialize-at-run-time=org.apache.derby.jdbc.Driver42
+                                --initialize-at-run-time=org.apache.derby.jdbc.EmbeddedDriver
+                                --initialize-at-run-time=org.apache.derby.jdbc.ResourceAdapterImpl
+                                --initialize-at-run-time=org.apache.derby.iapi.jdbc.DRDAServerStarter
+                                --initialize-at-run-time=org.apache.derby.iapi.jdbc.JDBCBoot
+                                --initialize-at-run-time=org.apache.derby.iapi.services.SecurityUtil
+                                --initialize-at-run-time=org.apache.derby.iapi.services.monitor.Monitor
+                                --initialize-at-run-time=org.apache.derby.impl.services.monitor.ModuleInstance
+                                --initialize-at-run-time=org.apache.derby.impl.services.monitor.ProtocolKey
+                                --initialize-at-run-time=org.apache.derby.impl.services.monitor.BaseMonitor
+                                --initialize-at-run-time=org.apache.derby.impl.services.monitor.TopService
+                                
+                                --initialize-at-run-time=com.alibaba.nacos.naming.core.v2.metadata.InstanceMetadata
+                                --initialize-at-run-time=com.alibaba.nacos.naming.core.v2.pojo.HealthCheckInstancePublishInfo
+                                --initialize-at-run-time=com.alibaba.nacos.naming.core.v2.pojo.BatchInstancePublishInfo
+                                --initialize-at-run-time=com.alibaba.nacos.naming.core.v2.pojo.BatchInstanceData
+                                --initialize-at-run-time=com.alibaba.nacos.naming.core.v2.pojo.InstancePublishInfo
+                                --initialize-at-run-time=com.alibaba.nacos.naming.core.v2.pojo.Service
+                                --initialize-at-run-time=com.alibaba.nacos.api.naming.pojo.Instance
+                                <!-- Build-time Hints -->
+                                --initialize-at-build-time=org.slf4j.LoggerFactory
+                                --initialize-at-build-time=ch.qos.logback.core.util.Loader
+                                --initialize-at-build-time=ch.qos.logback.core.status.InfoStatus
+                                --initialize-at-build-time=ch.qos.logback.classic.Logger
+                                --initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter
+                                --initialize-at-build-time=ch.qos.logback.core.CoreConstants
+                                --initialize-at-build-time=ch.qos.logback.classic.Level
+                                --initialize-at-build-time=ch.qos.logback.core.status.StatusBase
+                                --initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter2
                             </buildArgs>
                         </configuration>
                         <executions>
